--- a/apachetest.yaml
+++ b/apachetest.yaml
@@ -9,3 +9,7 @@
       service:
         name: apache2
         state: started
+    - name: update the index file
+      copy:
+        src: index.html
+        dest: /var/www/html/index.html
