--- a/nginx.yaml
+++ b/nginx.yaml
@@ -5,16 +5,16 @@
       package:
         name: nginx
         state: present
-    - name: check nginx service
-      service: 
-        name: nginx
-        state: started
     - name: update nginx config
-      copy:  
+      copy:
         src: /root/default
         dest: /etc/nginx/sites-available/default
-    - name: upadte the nginx file
-      copy:
+    - name: reload nginx service
+      service: 
+        name: nginx
+        state: restarted
+    - name: update nginx file
+      copy: 
         content: "<h1> Hi Nginx </h1>"
         dest: /var/www/html/index.html
   
